@@ -22,6 +22,9 @@
     <File name="UseCorrectPrefixTest.cs" subtype="Code" buildaction="Compile" />
     <File name="UseCorrectSuffixTest.cs" subtype="Code" buildaction="Compile" />
     <File name="UsePreferredTermsTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="DoNotPrefixValuesWithEnumNameTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="DoNotUseReservedInEnumValueNamesTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="ParameterNamesShouldMatchOverridenMethodTest.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="True" refto="framework" />
